[gd_scene load_steps=11 format=2]

[ext_resource path="res://new_aster.gd" type="Script" id=1]
[ext_resource path="res://PNG/Sprites X2/Meteors/broke2.png" type="Texture" id=2]
[ext_resource path="res://PNG/Sprites X2/Meteors/totally_broke.png" type="Texture" id=3]
[ext_resource path="res://PNG/Sprites X2/Meteors/spaceMeteors_001.png" type="Texture" id=4]
[ext_resource path="res://PNG/Sprites X2/Meteors/broke3.png" type="Texture" id=5]
[ext_resource path="res://PNG/Sprites X2/Meteors/broke.png" type="Texture" id=6]
[ext_resource path="res://PNG/Sprites X2/Meteors/spaceMeteors_002.png" type="Texture" id=7]
[ext_resource path="res://PNG/Sprites X2/Meteors/spaceMeteors_004.png" type="Texture" id=8]
[ext_resource path="res://PNG/Sprites X2/Meteors/spaceMeteors_003.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "destruccion_total",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "destroy",
"speed": 5.0
} ]

[node name="new_aster" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -167, 42 )
polygon = PoolVector2Array( 167, -72, 186, -64, 196, -47, 195, -29, 185, -13, 167, -10, 147, -16, 138, -31, 136, -50, 149, -63 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.141686, 0.136564 )
frames = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_new_aster_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_new_aster_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
